deploy/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - args:
        - /usr/local/poetry/bin/poetry
        - run
        - uvicorn
        - historedge_backend.api.app:app
        - --root-path
        - "/api/v1/"
        - --log-level
        - "debug"
        - --access-log
        - --use-colors
        - --lifespan
        - "on"
        - --workers
        - "$(API_WORKERS)"
        - --port
        - "$(API_PORT)"
        - --host
        - "$(API_HOST)"
        image: headsrooms/historedge:latest
        volumeMounts:
          - mountPath: /data
            name: data
        imagePullPolicy: "Always"
        name: api
        ports:
        - containerPort: 80
        resources: {}
      volumes:
        - name: data
          hostPath:
            path: /run/desktop/mnt/host/c/Users/Pablo/code/data-engineer-Pablo-Cabezas/data
      restartPolicy: Always
      serviceAccountName: ""
