deploy/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 30007
  selector:
    io.kompose.service: api
    app: api
status:
  loadBalancer: {}
