deploy/api/api-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-v1-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutebar
spec:
  routes:
  - match: PathPrefix(`/api/v1`)
    kind: Rule
    middlewares:
      - name: api-v1-stripprefix
        namespace: default
    services:
    - name: api
      port: 80
